--- a/popup.html
+++ b/popup.html
@@ -1,60 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Oi&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="./popup.css">
-  
   <title>Timer</title>
 </head>
 <body>
-  <h1>Scroll Companion</h1>
-  <label class="switch">
-    <input type="checkbox">
-    <span class="slider"></span>
-  </label>
+  <h1 id="h1">Scroll Companion</h1>
+  <button class="on" id="onButton">On/Off</button>
   <hr />
-  <label class="switch">
-    <input type="checkbox">
-    <span class="slider"></span>
-  </label>
-  <hr />
-  <label for="timerLength">Set Timer For:</label>
-  <div id="timeButtons">
-    <button id="fiveMin">5</button>
-    <button id="tenMin">10</button>
-    <br>
-    <button id="fifteenMin">15</button>
-    <button id="twentyMin">20</button>
-    <br>
-    <button id="twentyfiveMin">25</button>
-    <button id="thirtyMin">30</button>
-  </div>
-  <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-  Launch demo modal
-</button>
-
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+  <form id="domain"></form>
+    <label for="timerLength">Set Timer For:</label>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <button id="fiveMin">5</button>
+          <button id="tenMin">10</button>
+        </div>
+        <div class="col-md-6">
+          <button id="fifteenMin">15</button>
+          <button id="twentyMin">20</button>
+        </div>
       </div>
     </div>
-  </div>
-</div>
+  
+  
+    <label for="domain">Domain To Watch</label>
+    <input type="text" name="domain" id="domain">
+  </form>
+<script src="js/popup.js"></script>
 </body>
 </html>
