tinker with chrome.tabs.query

--- a/popup.html
+++ b/popup.html
@@ -41,8 +41,8 @@
       <label for="keywords">URL Keywords</label>
       <input class="textInput" type="text" name="keywords" id="keywords">
       <br/>
-      <input value="true" id="onNewTabButton" name="watchMethodRadioButtons" type="radio" class="btn btn-secondary">On Create New Tab</input>
-      <input value="true" id="onChangeTabButton" name="watchMethodRadioButtons" type="radio" class="btn btn-secondary">On Shift Focus to Tab</input>
+      <input value="onNewTab" id="onNewTabButton" name="watchMethodRadioButtons" type="radio" class="btn btn-secondary">On Create New Tab</input>
+      <input value="onChangeTab" id="onChangeTabButton" name="watchMethodRadioButtons" type="radio" class="btn btn-secondary">On Shift Focus to Tab</input>
       <!-- <label for="topDomain">Top Level Domain To Watch</label>
       <input class="textInput" type="text" name="domain" id="topDomain"> -->
       <button id="formSubmit" class="btn">Submit</button><button id="clearSettings" class="btn">Clear Settings</button>
