--- a/popup.html
+++ b/popup.html
@@ -73,24 +73,28 @@
   </div>
   <details>
     <summary> Notification Settings:</summary>
-    <form id="notificationForm">
-      <label for="title">
-        Title:
-        <input type="text" id="title" class="textInput">
-      </label>
-      <label for="message">
-        Message:
-        <input type="text" id="message" class="textInput">
-      </label>
-      <br/>
-      <label class="btn off notif">
-        <input value="requireInteraction" id="notificationSettingInteract" type="radio" class="notif" autocomplete="off">Require Interaction</input>
-      </label>
-      <label class="btn off">
-        <input value="silent" id="notificationSettingSilent" type="radio" class="notif" autocomplete="off">Silent</input>
-      </label>
-      <button class="on">Submit</button>
-    </form>
+    <label for="title">
+      Title:
+      <input type="text" id="title" class="textInput">
+    </label>
+    <label for="message">
+      Message:
+      <input type="text" id="message" class="textInput">
+    </label>
+    <label for="eventTime">
+      Event Time:
+      <input type="number" id="eventTime" class="textInput">
+    </label>
+    <br/>
+    <span>Require Interaction</span>
+    <label id="interact" class="btn off">
+      <input value="true" id="interactButton" name="interactInput" type="radio" class="notif"></input>
+    </label>
+    <span>Silent</span>
+    <label id="silent" class="btn off">
+      <input value="true" id="silentButton" name="silent" type="radio" class="notif">Silent</input>
+    </label>
+    <button id="notificationSubmit" class="on">Submit</button>
   </details>
   <div id="settingsDisplay">
     <ul>
