give notification setting buttons style

--- a/popup.html
+++ b/popup.html
@@ -86,13 +86,13 @@
       <input type="number" id="eventTime" class="textInput">
     </label>
     <br/>
-    <span>Require Interaction</span>
+    <span>Require Interaction:</span>
     <label id="interact" class="btn off">
-      <input value="true" id="interactButton" name="interactInput" type="radio" class="notif"></input>
+      <input value="true" name="interact" type="radio" id="interactButton" class="notifRadio">No</input>
     </label>
-    <span>Silent</span>
+    <span>Silent:</span>
     <label id="silent" class="btn off">
-      <input value="true" id="silentButton" name="silent" type="radio" class="notif">Silent</input>
+      <input value="true" id="silentButton" name="silent" type="radio" class="notifRadio">No</input>
     </label>
     <button id="notificationSubmit" class="on">Submit</button>
   </details>
