--- a/popup.html
+++ b/popup.html
@@ -71,30 +71,66 @@
       </div>
     </div>
   </div>
+  <container>
   <details>
     <summary> Notification Settings:</summary>
-    <label for="title">
-      Title:
-      <input type="text" id="title" class="textInput">
-    </label>
-    <label for="message">
-      Message:
-      <input type="text" id="message" class="textInput">
-    </label>
-    <label for="eventTime">
-      Event Time:
-      <input type="number" id="eventTime" class="textInput">
-    </label>
-    <br/>
-    <span>Require Interaction:</span>
-    <label id="interact" class="btn off">
-      <input value="true" name="interact" type="radio" id="interactButton" class="notifRadio">No</input>
-    </label>
-    <span>Silent:</span>
-    <label id="silent" class="btn off">
-      <input value="true" id="silentButton" name="silent" type="radio" class="notifRadio">No</input>
-    </label>
-    <button id="notificationSubmit" class="on">Submit</button>
+      <row>
+        <col-md>
+          <span class="notifLabels">Title:</span>
+        </col-md>
+        <col-md>
+          <label class="notifTextInput" for="title">
+          <input type="text" id="title" class="textInput">
+        </col-md>
+      </label>
+      </row>
+      <br/>
+      <row>
+        <col-md>
+          <span class="notifLabels">Message:</span>
+        </col-md>
+        <col-md>
+          <label class="notifTextInput" for="message">
+            <input type="text" id="message" class="textInput">
+          </label>
+        </col-md>
+      </row>
+      <br/>
+      <row>
+        <col-md>
+          <span class="notifLabels">Event Time:</span>
+        </col-md>
+        <col-md>
+          <label class="notifTextInput" for="eventTime">
+            <input type="number" id="eventTime" class="textInput">
+          </label>
+        </col-md>
+      </row>
+      <br/>
+      <row>
+        <col-md>
+          <span class="notifLabels">Require Interaction:</span>
+        </col-md>
+        <col-md>
+          <label id="interact" class="btn off">
+            <input value="true" name="interact" type="radio" id="interactButton" class="notifRadio">No</input>
+          </label>
+        </col-md>
+      </row>
+      <br/>
+      <row>
+        <col-md>
+          <span class="notifLabels">Silent:</span>
+        </col-md>
+        <col-md>
+          <label id="silent" class="btn off">
+            <input value="true" id="silentButton" name="silent" type="radio" class="notifRadio">No</input>
+          </label>
+        </col-md>
+      </row>
+      <br/>
+      <button id="notificationSubmit" class="on">Submit</button>
+    </container>
   </details>
   <div id="settingsDisplay">
     <ul>
