fix local storage

--- a/popup.html
+++ b/popup.html
@@ -119,7 +119,7 @@
           <div class="btn-group btn-group-toggle" data-toggle="buttons">
             <button id="formSubmit" class="btn on">Submit</button>
             <button id="clearSettings" class="btn btn-warning">Clear Settings</button>
-            <button id="saveTimer" class="btn on">Save Timer</button>
+            <!-- <button id="saveTimer" class="btn on">Save Timer</button> -->
           </div>
         </div>
         <div class="col-sm-4"></div>
